--- a/src/main/resources/Views/Admin/EmployeeManagement-view.fxml
+++ b/src/main/resources/Views/Admin/EmployeeManagement-view.fxml
@@ -2,10 +2,24 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="700.0" prefWidth="950.0" styleClass="content-container" stylesheets="@../../Styles/Admin/EmployeeManagement.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.Admin.EmployeeManagementController">
+<AnchorPane prefHeight="700.0" prefWidth="950.0" styleClass="content-container" stylesheets="@../../Styles/Admin/EmployeeManagement.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.Admin.EmployeeManagementController">
     <children>
         <VBox spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
             <children>
@@ -29,7 +43,7 @@
                 <!-- Search Bar -->
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
-                        <TextField fx:id="searchField" promptText="Search employees..." prefWidth="300.0" styleClass="search-field" />
+                        <TextField fx:id="searchField" prefWidth="300.0" promptText="Search employees..." styleClass="search-field" />
                         <Button fx:id="searchBtn" mnemonicParsing="false" styleClass="secondary-button" text="Search">
                             <graphic>
                                 <FontAwesomeIconView glyphName="SEARCH" size="14" />
@@ -59,6 +73,9 @@
                     <placeholder>
                         <Label text="No employees found" />
                     </placeholder>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
                 </TableView>
 
                 <!-- Form Panel -->
