--- a/src/main/resources/Views/Admin/PackageManagement-view.fxml
+++ b/src/main/resources/Views/Admin/PackageManagement-view.fxml
@@ -2,11 +2,26 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="700.0" prefWidth="950.0" styleClass="content-container" stylesheets="@../../Styles/Admin/PackageManagement.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.Admin.PackageManagementController">
+<AnchorPane prefHeight="700.0" prefWidth="950.0" styleClass="content-container" stylesheets="@../../Styles/Admin/PackageManagement.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.Admin.PackageManagementController">
     <children>
         <VBox spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
             <children>
@@ -30,7 +45,7 @@
                 <!-- Search Bar -->
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
-                        <TextField fx:id="searchField" promptText="Search packages..." prefWidth="300.0" styleClass="search-field" />
+                        <TextField fx:id="searchField" prefWidth="300.0" promptText="Search packages..." styleClass="search-field" />
                         <Button fx:id="searchBtn" mnemonicParsing="false" styleClass="secondary-button" text="Search">
                             <graphic>
                                 <FontAwesomeIconView glyphName="SEARCH" size="14" />
@@ -59,6 +74,9 @@
                     <placeholder>
                         <Label text="No tour packages found" />
                     </placeholder>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
                 </TableView>
 
                 <!-- Form Panel (Hidden by default, shown when adding/editing) -->
@@ -72,17 +90,17 @@
                                 <!-- Image Upload Section -->
                                 <VBox alignment="CENTER" spacing="10.0" styleClass="image-upload-section">
                                     <children>
-                                        <Label text="Package Image" styleClass="section-label" />
-                                        <StackPane fx:id="imageDropZone" styleClass="image-drop-zone" prefWidth="200.0" prefHeight="200.0">
+                                        <Label styleClass="section-label" text="Package Image" />
+                                        <StackPane fx:id="imageDropZone" prefHeight="200.0" prefWidth="200.0" styleClass="image-drop-zone">
                                             <children>
                                                 <VBox fx:id="dropPlaceholder" alignment="CENTER" spacing="8.0">
                                                     <children>
                                                         <FontAwesomeIconView glyphName="CLOUD_UPLOAD" size="40" styleClass="upload-icon" />
-                                                        <Label text="Drag &amp; Drop" styleClass="drop-label" />
-                                                        <Label text="or click to browse" styleClass="drop-sublabel" />
+                                                        <Label styleClass="drop-label" text="Drag &amp; Drop" />
+                                                        <Label styleClass="drop-sublabel" text="or click to browse" />
                                                     </children>
                                                 </VBox>
-                                                <ImageView fx:id="imagePreview" fitWidth="200.0" fitHeight="200.0" preserveRatio="true" pickOnBounds="true" visible="false" />
+                                                <ImageView fx:id="imagePreview" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" visible="false" />
                                             </children>
                                         </StackPane>
                                         <HBox alignment="CENTER" spacing="8.0">
